WOOSTIFY-126 #comment issue with calc on IE | old EDGE #done

--- a/assets/css/sass/woocommerce/product-columns.scss
+++ b/assets/css/sass/woocommerce/product-columns.scss
@@ -1,3 +1,4 @@
+$fake: 0.01px;
 .products {
     clear: both;
     padding-left: 0;
@@ -28,7 +29,7 @@
     		@media ( min-width: $screen-md ) {
 	    		&.columns-#{ $i } {
 		            .product{
-	                    width: calc( ( 100% - #{ 30px * ( $i - 1 ) } ) / #{ $i } );
+	                    width: calc( ( 100% - #{ 30px * ( $i - 1 ) } ) / #{ $i } - #{ $fake  } );
 
 	                    &:nth-of-type( #{ $i }n ) {
 	                    	margin-right: 0;
@@ -46,7 +47,7 @@
     		@media ( min-width: 601px ) and ( max-width: $screen-md - 1 ) {
 	    		&.tablet-columns-#{ $i } {
 		            .product{
-	                    width: calc( ( 100% - #{ 30px * ( $i - 1 ) } ) / #{ $i } );
+	                    width: calc( ( 100% - #{ 30px * ( $i - 1 ) } ) / #{ $i } - #{ $fake  } );
 
 	                    &:nth-of-type( #{ $i }n ) {
 	                    	margin-right: 0;
@@ -64,7 +65,7 @@
     		@media ( max-width: 600px ) {
 	    		&.mobile-columns-#{ $i } {
 		            .product{
-	                    width: calc( ( 100% - #{ 30px * ( $i - 1 ) } ) / #{ $i } );
+	                    width: calc( ( 100% - #{ 30px * ( $i - 1 ) } ) / #{ $i } - #{ $fake  } );
 
 	                    &:nth-of-type( #{ $i }n ) {
 	                    	margin-right: 0;
